--- a/css/style.css
+++ b/css/style.css
@@ -480,6 +480,8 @@ footer {
     color: rgba(0, 0, 0, 0.31);
 }
 .byme {
+    display: flex;
+    flex-direction: column;
     width: 285.27px;
 }
 
